alibi button working ch 8 complete

--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
         </header>
         <article class="noteFormContainer"></article>
         <article class="criminalsContainer"></article>
+        <article class="alibiContainer"></article>
         <aside class="noteListContainer">
             <div class="noteListButton"></div>
             <article class="noteList"></article>
