--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
         <aside class="noteListContainer">
             <div class="noteListButton"></div>
             <article class="noteList"></article>
+        <article class="witnessContainer"></article>
+            <div class="witnessListButton"></div>
+            <article class="witnessList"></article>
           </aside>
     </main>
 
